--- a/pineapple/7714.html
+++ b/pineapple/7714.html
@@ -1,21 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>7714 Pineapple Doily - Free Crochet Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1AABUy-qTWYsZlTAzZfS2mb4WO5IhrL9E&export=download"><img src="images/7714.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> 7714 Pineapple Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">7741 Doily Pattern</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b> 
-
+<br>J. & P. COATS or CLARK'S O.N.T. BEST SIX CORD MERCERIZED CROCHET, Size 20.
+Steel Crochet Hook No. 8 or 9.
 <br><b>Starting</b> at center, ch 8. Join with sl st to form a ring.
 <br><b>1st rnd:</b> Ch 3, 23 dc in ring. Join to top of ch-3.
 <br><b>2nd rnd:</b> Ch 3, dc in same place as sl st, (ch 2, skip 1 dc, 2 dc in next dc) 11 times; ch 2, sl st in top of ch-3.
@@ -40,22 +30,8 @@
 <br><b>Complete</b> other half of doily to correspond.
 <br><b>EDGING<br>1st rnd:</b> Attach thread to a ch-4 loop at tip of any pineapple, ch 3 and in same loop complete a shell, * ch 3, shell in next turning ch-4 loop. Repeat from * around, ending with dc in top of starting chain.
 <br><b>2nd rnd:</b> Sl st under the dc just made, sc in same sp, * ch 3, in sp of next shell make dc, ch 3, sc in 3rd ch from hook (a picot made) and dc. Ch 3, sc in next sp between shells. Repeat from * around, ending with ch 3, sl st in 1st sc made. Break off.
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
