--- a/pineapple/center.html
+++ b/pineapple/center.html
@@ -1,19 +1,8 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Pineapple Pineapple Centerpiece Free Crochet Doily Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<p align="right"><a href="https://drive.google.com/uc?id=1PQE7GcSUxkIQj01rUhaSePybCR51n8S1"><img src="images/center.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pineapple Centerpiece Doily Pattern</b></font><br><br>
+<html><head><title>Pineapple Centerpiece Free Crochet Doily Pattern</title></head>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
+<p align="right"><a href="https://drive.google.com/uc?id=1PQE7GcSUxkIQj01rUhaSePybCR51n8S1&export=download"><img src="images/center.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Centerpiece Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br><b>Rnd 1:</b> Ch 1, 16 sc in ring, join.
 <br><b>Rnd 2:</b> (Ch 5, sc in next sc) 15 times, ch 2, dc in next st.
@@ -38,24 +27,8 @@
 <br><b>Rnd 21:</b> Ch 1, sc in same st, 11 sc in next ch-9 sp, * (sc in next tr, 8 sc in next sp) 4 times, 8 sc in 1st sp on next pattern, sc in next tr, ch 4, turn, sl st in 9th sc up previous pattern, ch 1, turn, (3 sc, ch-5 p, 3 sc) in ch-4, 8 sc in next sp, sc in next tr, ch 12, turn, sk 8 sc on previous pattern, sl st in next sc, ch 1, turn, (sc, ch 1, 3 dc, ch 1, sc) 4 times in ch-12 sp, 8 sc in next sp, sc in next tr, ch 5, turn, tr in center dc of 1st scallop, (ch 5, tr in next scallop) 3 times, ch 5, sk 8 sc, sl st in next sc, ch 1, turn, in each ch-5 sp make sc, ch 1, 5 dc, ch 1, sc; 8 sc in next sp, sc in next tr, 4 sc in next ch-9 sp, ch 7, turn, tr tr in center dc of 1st scallop, ch 7, tr tr in next scallop, ch 7, (tr tr, ch 7, tr tr) in next (center) scallop, (ch 7, tr tr in next scallop) twice, ch 7, sk 12 sc, sl st in next sc; ch 1, turn, in each ch-7 sp make sc, ch 1, 1 dc, 7 tr, 1 dc, ch 1 and sc; 7 sc in balance of ch-9 sp; repeat from * around; sl st in 1st 5 sc and complete rnd. Fasten off.
 <br><b>Rnd 22:</b> Attach to center tr on 1st scallop on 1 pattern, * ch 8, sl st in 5th ch from hook for a p, (ch 6, p) twice, ch 4, sc in center tr of next scallop; repeat from * 5 times, ch 2, sc in 1st scallop on next pattern; repeat from * around; join and fasten off. 
 <br>Stretch and pin doily right-side-down in a true circle. Steam and press dry thru a cloth.
-
-
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
