--- a/pineapple/large_pineapple.html
+++ b/pineapple/large_pineapple.html
@@ -1,21 +1,10 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Large Pineapple Doily Pattern Free .pdf Download</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1ibFfuIcwGpmsBu9Ga1PShMN4ZlJEaqYr&export=download"><img src="images/lpineapple.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Large Pineapple Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Large Pineapple Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
 <br><b>1st Round:</b> Ch 6, join to form a ring, ch 1 and work 8 sc in ring, join in 1st sc. 
 <br><b>2nd Round:</b> * Ch 10, sc in next sc, repeat from * 6 times, ch 4, dtrc (3 times over hook) in same space as 
 beginning (this brings thread in position for next round) . 
@@ -100,22 +89,8 @@ ch 2, skip 1 loop, cluster st in next loop, ch 5, sl st in 3rd st from hook for 
 same space, * work a picot loop, 2 cluster sts with picot loop between in next loop, repeat from * once, ch 2, skip 
 the ch 2 loop, sc in next loop, work a picot loop, sc in next loop, repeat from ** all around, join, cut thread. n in next loop, repeat from * once, ch 2, skip 
 the ch 2 loop, sc in next loop, work a picot loop, sc in next loop, repeat from ** all around, join, cut thread. 
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
