--- a/pineapple/pinec.html
+++ b/pineapple/pinec.html
@@ -1,53 +1,27 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pineapple Centerpiece Free Crochet Doily Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=15gNWK_48V2c5LzVmZvvRMV2qwr-BTWj3&export=download"><img src="images/pinec.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pineapple Centerpiece Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-<br>
-LILY MERCERIZED CROCHET COTTON, Art. 36, Size 30: 1 ball White or Ecru; or <br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Centerpiece Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b> 
+<br>LILY MERCERIZED CROCHET COTTON, Art. 36, Size 30: 1 ball White or Ecru; or <br>
 LILY MERCROCHET MERCERIZED CROCHET COTTON, Art. 161, Size 30: 2 balls White or Ecru. <br>
 No. 13 Steel Crochet Hook. Work tightly for best results. 
-<br><br>Starting in center, ch 8, join with sl st to form ring. 
+<br>Starting in center, ch 8, join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 1, 12 sc in ring, join with sl st in 1st sc. 
-
 <br><b>2nd rnd:</b> Ch 5, tr in same sc, (ch 6, sk 1 sc, 2 tr in next sc) 5 times, ch 6, join to top of ch-5. 
-
 <br><b>3rd rnd:</b> Ch 3, dc in next tr, (9 dc in next sp, dc in next 2 tr) 5 times, 9 dc in next sp, join to ch-3. 
-
 <br><b>4th rnd:</b> Sl st in next 2 dc, ch 3, dc in next 8 dc, (ch 7, sk 2 dc, dc in next 9 dc) 5 times, ch 7, join to ch-3. 
-
 <br><b>5th rnd:</b> Ch 3, dc in next 2 dc, * holding back the last lp of each dc on hook make dc in next 3 dc, thread over and draw thru all lps on hook for a Cluster-decrease, dc in next 3 dc, ch 5, sc in next ch-7 lp, ch 5, ** dc in 1st 3 dc of next petal. Repeat from * 4 times and from * to ** again; join to ch-3. 
-
 <br><b>6th rnd:</b> Ch 3, dc in next dc, * (dc in next 3 dc) made into a Cluster-dec, dc in next 2 dc, ch 8, sc in sc between next 2 sps, ch 8, ** dc in 1st 2 dc of next petal. Repeat from * 4 times and from * to ** again; join to ch-3. 
-
 <br><b>7th rnd:</b> Ch 3, * (dc in next 3 dc) made into a Cluster-dec, ch 6, sl st in Cluster for a p, dc in next dc, (ch 7, sc in next ch-8 lp) twice, ** ch 7, dc in 1st dc of next petal. Repeat from * 4 times and from * to ** again; ch 3, join with tr in 1st p. 
-
 <br><b>8th rnd:</b> (7 tr, ch 6, sl st in last tr for a p, 6 tr) in same p, * sc in next lp, (ch 8, sc in next lp) twice, (7 tr, p, 6 tr) in next p. Repeat from * 4 times. Sc in next lp, ch 8, sc in next lp, ch 4, join with tr in 1st tr of next shell. 
-
 <br><b>9th rnd:</b> Ch 8, (8 tr, p, 7 tr) in p of same shell, * ch 8, sc in next lp, ch 11, sc in next lp, ch 8, (8 tr, p, 7 tr) in next shell p. Repeat from * 4 times and from * to * again; ch 6, join with tr in tr at end of last rnd. 
-
 <br><b>10th rnd:</b> ch 8, tr in 1st tr of next shell, ch 8, (8 tr, p, 7 tr) in p of same shell, ch 8, tr in last tr of same shell, ch 8, sc in center ch-11 lp. Repeat from * 5 times. 
-
 <br><b>11th rnd:</b> Ch 8, * tr in next tr, ch 8, tr in 1st tr of next shell, ch 8, (8 tr, p, 7 tr) in p of same shell, ch 8, tr in last tr of same shell, ch 8, tr in next tr, ch 3, ** tr in sc between next 2 lps, ch 3. Repeat from * 4 times and from * to ** again; join to 5th st of 1st ch-8, sl st to next tr. 
-
 <br><b>12th rnd:</b> Ch 13, * tr in next tr, ch 8, tr in 1st tr of next shell, ch 8, 10 tr in p of same shell, ch 8, tr in last tr of same shell, (ch 8, tr in next tr) twice, ** sk next 2 ch-3 sps, tr in next tr, ch 8. Repeat from * 4 times and from * to ** again; join to 5th st of 1st ch-13. 
-
 <br><b>13th rnd:</b> (Ch 8, tr in next tr) twice, ch 8, 2 tr in each tr of next shell (pineapple), (ch 8, tr in next tr) twice, ch 3, ** tr between 2 tr in angle, ch 3, sk next ch-8 sp, tr in next tr, ch 8, tr in next tr. Repeat from * 4 times and from * to ** again; join to 5th st of 1st ch-8, sl st to next tr. 
-
 <br><b>14th rnd:</b> Ch 13, tr in next tr, ch 8, tr in next tr, * (ch 1, tr in next tr of pineapple) 19 times, (ch 8, tr in next tr) twice, sk 2 ch-3 sps in angle, ** tr in next tr, (ch 8, tr in next tr) twice. Repeat from * 4 times and from * to ** again; join to 5th st of 1st ch-13. Fasten off. 
-
 <br><b>PINEAPPLE:</b> ** Attach to 1st tr of next pineapple, (ch 6, sc in next ch-1 sp) 19 times, ch 3, dc in end tr. Ch 5, turn, sc in next ch-6 lp, (ch 5, sc in next lp) repeated across thru 2d lp from end, ch 2, dc in end lp. * Ch 5, turn, sc in next ch-5 lp, (ch 5, sc in next lp) repeated across thru 2nd lp from end, ch 2, dc in end lp. * Repeat from * to * 11 times (7 lps in final row). Ch 5, turn, sc in next ch-5 lp, ch 5, sc in next lp, ch 5, (sc, ch 5, sc) in next lp for an increase, (ch 5, sc in next lp) twice, ch 2, dc in end lp. Repeat from * to * twice. Ch 5, turn, sc in next ch-5 lp, ch 5, (sc, ch 5, sc) in next lp, ch 5, sc in next lp, ch 2, dc in end lp. Repeat from * to * twice. Ch 5, turn, (sc, ch 5, sc) in next ch-5 lp, ch 2, dc in end lp. Ch 5, turn, sc in next lp, ch 2, dc in end lp. Ch 5, turn, sc in next lp. Fasten off. Repeat from ** 5 times to complete 6 Pine-apples. 
 <br><b>BORDER:</b> Attach to tip of one pineapple, ch 3, 2 dc in same lp made into a Cluster, (ch 3, a 3-dc Cluster in same lp) twice, * (ch 3, 3-dc Cluster in next sp down side of pineapple) 22 times, 3 sc in left half of next ch-8 sp, sc in next tr, 8 sc in next sp, sc between 2 tr in angle, 8 sc in next sp, sc in tr, 3 sc in next sp, 3-dc Cluster in 1st sp on next pineapple, (ch 3, 3-dc Cluster in next sp) 2 times to tip lp, ** (ch 3, Cluster) 3 times in same lp. Repeat from * 4 times and from * to ** again; ch 3, join to 1st Cluster, sl st in next (center) ch-3 sp. 
 <br><b>2d rnd:</b> Ch 10, * tr in same sp, (ch 3, tr in next ch-3 sp) 23 times, ch 3, sk 7 sc in angle, sc in next sc, sk 4 sc, a 7-tr shell in next (center) sc in angle, sk 4 sc, sc in next sc, ch 3, tr between 1st 2 Clusters on next pineapple, ** (ch 3, tr in next sp) 23 times to center sp at tip, ch 5. Repeat from * 4 times and from * to ** again; (ch 3, tr in next sp) 22 times, ch 3, join to 5th st of 1st ch-10. 
@@ -55,22 +29,8 @@ No. 13 Steel Crochet Hook. Work tightly for best results.
 of next sp, ch 8, sl st in 8th sc up next pineapple. Ch 1, turn, 9 sc in next sp, sc in tr, 4 sc in next sp, ch 4, sl st in last sc for a p, 5 sc in bal of sp, sc in 5 dtr, (sc, ch 4, sc) in next dtr, sc in 5 dtr, (6 sc, p, 3 dc) in next sp, sc in tr, 9 sc in next sp, (3 sc in next sp, sc in tr) twice. Ch 6, turn, tr in 5th (center) sc of next sp, ch 6, a 9-tr shell in next p, ch 4, 11 dtr in center of next shell, ch 4, a 9-tr shell in next p, ch 6, tr in 5th sc in next sp, ch 6, sl st in 8th sc up next pineapple. Ch 1, turn, 7 sc in next sp, so in tr, 7 sc in next sp, sc in next 4 tr, (sc, ch 4, sc) in next tr, sc in 4 tr, 4 sc in next sp, sc in 5 dtr, (sc, ch 4, sc) in next dtr, sc in 5 dtr, 4 sc in next sp, sc in next 4 tr, (sc, ch 4, sc) in next tr, sc in 4 tr, 7 sc in next sp, sc in tr, 7 sc in next sp, (3 sc in next sp, sc in tr) twice. Ch 6, turn, (tr in center sc in next sp, ch 6) twice, 9 tr in center of next shell, ch 8, 11 dtr in center of next shell, ch 8, 9 tr in center of next shell, (ch 6, tr in center of next sp) twice, ch 6, sl st in 8th sc up next pineapple. Ch 1, turn, (7 sc in next sp, sc in tr) twice, 7 sc in next sp, sc in next 4 tr, (sc, ch 4, sc) in next tr, sc in 4 tr, (5 sc, p, 4 sc) in next sp, sc in 5 dtr, (sc, ch 4, sc) in next dtr, sc in 5 dtr, (5 sc, p, 4 sc) in next sp, sc in 4 tr, (sc, ch 4, sc) in next tr, sc in 4 tr, (7 sc in next sp, sc in tr) twice, 7 sc in next sp, (3 sc in next sp, sc in tr) twice. Ch 6, turn, tr in center sc in next ch-6 sp, (ch 6, tr in center sc of next sp) twice, ch 2, 9-tr shell in next shell, ch 2, 9-tr shell in next p, ch 2, 11-dtr shell in next shell, ch 2, 9-tr shell in next p, ch 2, 9-tr shell in next shell, ch 2, tr in center sc of next sp, (ch 6, tr in center sc of next sp) twice, ch 6, sl st in 8th sc up next pineapple. Ch 1, turn, (7 sc in next sp, sc in tr) 3 times, 2 sc in next sp, (sc in next 4 tr, in next tr make sc, ch 4, sc ; sc in 4 tr, 2 sc in next sp) twice, sc in next 5 dtr, (sc, ch 4, sc) in next dtr, sc in next 5 dtr, 2 sc in next sp, (sc in next 4 tr, in next tr make sc, ch 4, sc; sc in 4 tr, 2 sc in next sp) twice, (sc in next tr, 7 sc in next sp) 3 times, (3 sc in next sp, sc in tr) twice. Ch 6, turn, (tr in center sc of next sp, ch 6) 3 times, 9-tr shell in next shell, ch 4, 9-tr shell in next shell, ch 4, 11-dtr shell in next shell, (ch 4, 9-tr shell in next shell) twice, (ch 6, tr in center sc of next sp) 3 times, ch 6, sl st in 8th sc up next pineapple. Ch 1, turn, (7 sc in next sp, sc in tr) 3 times, 7 sc in next sp, (sc in next 4 tr, in next tr make sc, ch 4, sc; sc in next 4 tr, 4 sc in next sp) twice, sc in next 5 dtr, (sc, ch 4, sc) in next dtr, sc in next 5 dtr, (4 sc in next sp, sc in next 4 tr, in next tr make sc, ch 4, sc; sc in next 4 tr) twice, (7 sc in next sp, sc in tr) 3 times, 7 sc in next sp, (3 sc in next sp, sc in tr) twice. Ch 6, turn, tr in center sc of next sp, (ch 6, tr in center sc of next sp) 3 times, ch 2, 9-tr shell in next shell, ch 6, 9-tr shell in next shell, ch 6, 11-dtr shell in next shell, (ch 6, 9-tr shell in next shell) twice, ch 2, (tr in center sc of next sp, ch 6) 4 times, sl st in 8th sc up next pineapple. Ch 1, turn, make 7 sc in ch-6 sps, sc in each tr, 2 sc in ch-2 sps and work across shells as in previous rows. End with (3 sc in next sp on pineapple, sc in tr) twice, 3 sc in half of tip-sp. Ch 10, turn, (tr in center sc of next ch-6 sp, ch 6) 4 times, (9-tr shell in next shell, ch 4, tr in center sc of next sp, ch 4) twice, 
 11-dtr shell in next shell, (ch 4, tr in center sc of next sp, ch 4, 9-tr shell in next shell) twice, (ch 6, tr in center sc of next sp) 4 times, ch 10, sl st in 3d sc in tip-sp on pineapple. Ch 1, turn, (6 sc, p, 5 sc) in ch-10 sp, (sc in tr, in next sp make 4 sc, p, 3 sc) 4 times, (sc in next 5 tr, p, sc in next 4 tr, 4 sc in next sp, sc in tr, a p, 4 sc in next sp) twice, sc in next dtr, a p, sc in next 5 dtr, (4 sc in next sp, sc in tr, a p, 4 sc in next sp, sc in next 5 tr, a p, sc in next 4 tr) twice, (in next sp make 4 sc, p, 3 sc; sc in tr) 4 times, (6 sc, p, 5 sc) in next sp. Repeat from * around. Join to 1st sc and fasten off. 
 Stretch and pin centerpiece right-side-down in a true circle. Steam and press dry thru a doubled cloth. 
-
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
