--- a/pineapple/sunburst_pineapple.html
+++ b/pineapple/sunburst_pineapple.html
@@ -1,19 +1,8 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Sunburst Doily - Free Crochet Doily Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1z5JJCbE_254qGXO4PDrrckMoTfs_burl&export=download"><img src="images/sunburst.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Sunburst Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Sunburst Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b><br>
  For doily 20" in diameter: Daisy Mercerized Crochet Cotton, size 20, 2 skeins: steel crochet hook No. 9.
 <br><b>lst Rnd:</b> Starting at center, ch 5. Dc in first ch, (ch 1, dc in same ch) 6 times; ch 1, sl st in 4th ch of ch-5.
@@ -60,23 +49,8 @@
 <br><b>SMALL SCALLOP:</b> Attach thread in same sp where last dc of first row of pineapple was made; ch 5, skip next dc, dc in next 2 dc and next sp, ch 2, skip next dc, dc in next dc, ch 2, dc in next sp and 2 dc, ch 2, dc in next sp, ch 5, turn; skip next dc, dc in next 2 dc, 2 sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc, dc between 3-dc groups, dc in next 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in 3 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; dc in center dc, ch 2, dc in 3rd ch of ch-5, ch 3, turn; dc in 3rd ch of ch-5. Break off.
 <br><b>LARGER SCALLOP:</b> Attach thread in same sp where last dc of first row of pineapple was made; ch 5, (skip next dc, dc in next 2 dc and sp, ch 2) twice; skip next dc, dc in next dc, (ch 2, dc in next sp and 2 dc) twice; ch 2, dc in next sp, ch 5, turn; skip next dc, dc in next 2 dc and sp, ch 2, skip next dc, dc in next 2 dc, 2 sp and 2 dc, ch 2, dc in next sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc and sp, ch 2, skip next dc, dc in next 2 dc, dc between 3-dc groups and in next 2 dc, ch 2, dc in next sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc, ch 2, skip next dc, dc in next 3 dc, ch 2, dc in next sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc and next sp, ch 2, dc in center dc, ch 2, dc in next sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc, 2 sp and 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 2 dc, dc between 3-dc groups and next 2 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; skip next dc, dc in next 3 dc, ch 2, dc in 3rd ch of ch-5, ch 5, turn; dc in center dc, ch 2, dc in 3rd ch of ch-5, ch 3, turn; dc in 3rd ch of ch-5. Break off.
 <br>Work one rnd of sc closely around entire edge. Work 2 more rnds of sc having 3 sc in tip of each scallop and skipping first and last 2 sc on each scallop. Join and break off.
-
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
