--- a/pineapple/easy_crochet.html
+++ b/pineapple/easy_crochet.html
@@ -1,22 +1,10 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Easy Doily Crochet Free Crochet Doily Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1lgsZ0rxiULpcaWRQ7G-6jQWhAmbu16Q6&export=download"><img src="images/easycrochet.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Easy Doily Crochet Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 or DELUXE Quality MERCERIZED CROCHET COTTON, Article 346,
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Easy Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 or DELUXE Quality MERCERIZED CROCHET COTTON, Article 346,
 2 balls White.
 <br>Steel crochet hook No. 7
 <br>Approximate size: 18 inches in diameter
@@ -52,21 +40,8 @@ AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 
 <br><b>27th Rnd:</b> ** Ch 15, * trc in next trc, trc in next cluster, trc in next trc, ch 15, repeat from * twice, sc between the 2 sl sts of previous round, repeat from all around ending to correspond, join.
 <br><b>28th Rnd:</b> Sl st to center of next loop, ** ch 10, trc in next trc, skip next trc, trc in next trc, * ch 20, trc in next trc, skip next trc, trc in next trc, repeat from * once, ch 10, 1 sl st in each of the next 2 loops, repeat from ** all around ending to correspond, join in 1st sl st.
 <br><b>29th Rnd:</b> Sl st to center of next loop, ** ch 5, trc between next 2 trc, ch 5, sl st in top of trc for picot, * ch 24, trc between next 2 trc, ch 5, sl st in top of trc for picot, repeat from * once, ch 5, sl st in center of next loop, sl st in center of next loop, ch 5, sl st between next 2 sl sts for picot, repeat from ** all around ending to correspond, join, cut thread.
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
