--- a/pineapple/pineapple_bead.html
+++ b/pineapple/pineapple_bead.html
@@ -1,22 +1,10 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pineapples Beads Free Crochet Doily Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1M1SXdRkRv26vKVQrI3VXmCSx5rYLUAfr&export=download"><img src="images/pineapple_bead.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pineapples And Beads Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-
-AMERICAN THREAD COMPANY "GEM" MERCERIZEdcROCHET COTTON, Article 35, size 30 1 ball White or "STAR" MERCERIZED CROCHET COTTON, Article 20, size 30 1 ball White
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapples and Beads Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY "GEM" MERCERIZEdcROCHET COTTON, Article 35, size 30 1 ball White or "STAR" MERCERIZED CROCHET COTTON, Article 20, size 30 1 ball White
 <br>2 bottles of gold glass beads
 <br>Steel crochet hook No. 12.
 <br>Approximate size: 10 inches in diameter.
@@ -50,21 +38,8 @@ AMERICAN THREAD COMPANY "GEM" MERCERIZEdcROCHET COTTON, Article 35, size 30 1 ba
 <br><b>26th Rnd:</b> Without using beads and working on right side, * ch 6, sc in next loop, repeat from * all around ending with ch 3, dc in dc.
 <br><b>27th Rnd:</b> * Ch 6, sl st in 3rd st from hook for picot, ch 3 (picot loop), sc in next loop, repeat from * once, ** ch 3, 2 trc cluster st in next loop, ch 3, sl st in top of cluster st for picot, * ch 2, 2 trc cluster st in same loop, ch 3, sl st in top of cluster st for picot, repeat from * once, ch 3, sc in next loop, * ch 6, sl st in 3rd st from hook for picot, ch 3, sc in next loop, repeat from * twice, ch 3, 2 trc cluster st in next loop (corner) ch 3 picot * ch 2, 2 trc cluster st in same loop, ch 3 picot, repeat from * 3 times, ch 3, sc in next loop, * picot 1oop, sc in next loop, repeat from * twice, ch 3, 3 - 2 trc cluster sts with picot on each 
 cluster st andch 2 between each cluster st in next loop, ch 3, sc in next loop, * picot loop, sc in next loop, repeat from * 5 times, repeat from ** all around ending to correspond, join, cut thread.
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
