--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
 
+<div class="grid-view"><div class="prev"><a href="round/honey.html"><img src="round/images/honeyt.jpg" alt="" /></a></div><p><a href="round/honey.html">Honeysuckle Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/fluff.html"><img src="ruffle/images/flufft.jpg" alt="" /></a></div><p><a href="ruffle/fluff.html">Fluffy Ruffles</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/crystal.html"><img src="bedspread/images/crystalt.jpg" alt="" /></a></div><p><a href="bedspread/crystal.html">Crystal Web Bedspread</a></p></div>	
 <div class="grid-view"><div class="prev"><a href="tablecloths/lotus.html"><img src="tablecloths/images/lotust.jpg" alt="" /></a></div><p><a href="tablecloths/lotus.html">Lovely Lotus Tablecloth</a></p></div>
