--- a/round.html
+++ b/round.html
@@ -44,6 +44,8 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Decorative Doily Patterns </p></font></center>
 
+<div class="grid-view"><div class="prev"><a href="round/citrus.html"><img src="round/images/citrust.jpg" alt="" /></a></div><p><a href="round/citrus.html">Golden Citrus Doily</a></p></div>
+
 <div class="grid-view"><div class="prev"><a href="round/honey.html"><img src="round/images/honeyt.jpg" alt="" /></a></div><p><a href="round/honey.html">Honeysuckle Doily</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
