--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
 
+<div class="grid-view"><div class="prev"><a href="round/clust.html"><img src="round/images/clustt.jpg" alt="" /></a></div><p><a href="round/clust.html">Crocheted Cluster Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="round/shade.html"><img src="round/images/shadet.jpg" alt="" /></a></div><p><a href="round/shade.html">Pink Lavender Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/citrus.html"><img src="round/images/citrust.jpg" alt="" /></a></div><p><a href="round/citrus.html">Golden Citrus Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/honey.html"><img src="round/images/honeyt.jpg" alt="" /></a></div><p><a href="round/honey.html">Honeysuckle Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/fluff.html"><img src="ruffle/images/flufft.jpg" alt="" /></a></div><p><a href="ruffle/fluff.html">Fluffy Ruffles</a></p></div>
