--- a/ruffle.html
+++ b/ruffle.html
@@ -44,6 +44,8 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Ruffled Crochet Doily Patterns</p></font></center>
 
+<div class="grid-view"><div class="prev"><a href="ruffle/octopus.html"><img src="ruffle/images/octopust.jpg" alt="" /></a></div><p><a href="ruffle/octopus.html">The Octopus Ruffle Doily</a></p></div>
+
 <div class="grid-view"><div class="prev"><a href="ruffle/fluff.html"><img src="ruffle/images/flufft.jpg" alt="" /></a></div><p><a href="ruffle/fluff.html">Fluffy Ruffles</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="ruffle/blossom.html"><img src="ruffle/images/blossomt.jpg" alt="" /></a></div><p><a href="ruffle/blossom.html">Blossom Ruffle</a></p></div>
