--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
       
     </div>
   
-		
+
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
+
+
+
+
+<div class="grid-view"><div class="prev"><a href="ruffle/tulip2.html"><img src="ruffle/images/tulipt.jpg" alt="" /></a></div><p><a href="ruffle/tulip2.html">Tulip Garden Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="ruffle/sunburst.html"><img src="ruffle/images/sunburstt.jpg" alt="" /></a></div><p><a href="ruffle/sunburst.html">Sunburst Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/octopus.html"><img src="ruffle/images/octopust.jpg" alt="" /></a></div><p><a href="ruffle/octopus.html">The Octopus Ruffle Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/clust.html"><img src="round/images/clustt.jpg" alt="" /></a></div><p><a href="round/clust.html">Crocheted Cluster Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/shade.html"><img src="round/images/shadet.jpg" alt="" /></a></div><p><a href="round/shade.html">Pink Lavender Doily</a></p></div>
