--- a/ruffle.html
+++ b/ruffle.html
@@ -44,20 +44,17 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Ruffled Crochet Doily Patterns</p></font></center>
 
+
+
+<div class="grid-view"><div class="prev"><a href="ruffle/tulip2.html"><img src="ruffle/images/tulipt.jpg" alt="" /></a></div><p><a href="ruffle/tulip2.html">Tulip Garden Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="ruffle/sunburst.html"><img src="ruffle/images/sunburstt.jpg" alt="" /></a></div><p><a href="ruffle/sunburst.html">Sunburst Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/octopus.html"><img src="ruffle/images/octopust.jpg" alt="" /></a></div><p><a href="ruffle/octopus.html">The Octopus Ruffle Doily</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/fluff.html"><img src="ruffle/images/flufft.jpg" alt="" /></a></div><p><a href="ruffle/fluff.html">Fluffy Ruffles</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/blossom.html"><img src="ruffle/images/blossomt.jpg" alt="" /></a></div><p><a href="ruffle/blossom.html">Blossom Ruffle</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/pinr.html"><img src="ruffle/images/pinrt.jpg" alt="" /></a></div><p><a href="ruffle/pinr.html">Pineapple Ruffle</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/irishruff.html"><img src="ruffle/images/irishrufft.jpg" alt="" /></a></div><p><a href="ruffle/irishruff.html">Irish Rose Ruffle</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/starbr.html"><img src="ruffle/images/starbrt.jpg" alt="" /></a></div><p><a href="ruffle/starbr.html">Starburst Ruffle</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/tailored.html"><img src="ruffle/images/tailoredt.jpg" alt="" /></a></div><p><a href="ruffle/tailored.html">Tailored Ruffled</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="ruffle/doubleruffle.html"><img src="ruffle/images/doublerufflet.jpg" alt="" /></a></div><p><a href="ruffle/doubleruffle.html">The Double Ruffle</a></p></div>
 
 
