--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-
+<div class="grid-view"><div class="prev"><a href="ruffle/leafy.html"><img src="ruffle/images/leafyt.jpg" alt="" /></a></div><p><a href="ruffle/leafy.html">Leafy Spray Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/tulip2.html"><img src="ruffle/images/tulipt.jpg" alt="" /></a></div><p><a href="ruffle/tulip2.html">Tulip Garden Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/sunburst.html"><img src="ruffle/images/sunburstt.jpg" alt="" /></a></div><p><a href="ruffle/sunburst.html">Sunburst Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/octopus.html"><img src="ruffle/images/octopust.jpg" alt="" /></a></div><p><a href="ruffle/octopus.html">The Octopus Ruffle Doily</a></p></div>
