--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
 
 
-
+<div class="grid-view"><div class="prev"><a href="ruffle/mag.html"><img src="ruffle/images/magt.jpg" alt="" /></a></div><p><a href="ruffle/mag.html">Magnolia Blossom Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="ruffle/pinetree.html"><img src="ruffle/images/pinetreet.jpg" alt="" /></a></div><p><a href="ruffle/pinetree.html">Pine Tree Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/leafy.html"><img src="ruffle/images/leafyt.jpg" alt="" /></a></div><p><a href="ruffle/leafy.html">Leafy Spray Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/tulip2.html"><img src="ruffle/images/tulipt.jpg" alt="" /></a></div><p><a href="ruffle/tulip2.html">Tulip Garden Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/sunburst.html"><img src="ruffle/images/sunburstt.jpg" alt="" /></a></div><p><a href="ruffle/sunburst.html">Sunburst Doily</a></p></div>
