--- a/ruffle.html
+++ b/ruffle.html
@@ -45,6 +45,10 @@
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Ruffled Crochet Doily Patterns</p></font></center>
 
 
+
+
+<div class="grid-view"><div class="prev"><a href="ruffle/sqruff.html"><img src="ruffle/images/sqrufft.jpg" alt="" /></a></div><p><a href="ruffle/sqruff.html">Square Ruffle Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="ruffle/reef.html"><img src="ruffle/images/reeft.jpg" alt="" /></a></div><p><a href="ruffle/reef.html">Ruffle Reef Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/mag.html"><img src="ruffle/images/magt.jpg" alt="" /></a></div><p><a href="ruffle/mag.html">Magnolia Blossom Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/pinetree.html"><img src="ruffle/images/pinetreet.jpg" alt="" /></a></div><p><a href="ruffle/pinetree.html">Pine Tree Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/leafy.html"><img src="ruffle/images/leafyt.jpg" alt="" /></a></div><p><a href="ruffle/leafy.html">Leafy Spray Doily</a></p></div>
