--- a/pineapple.html
+++ b/pineapple.html
@@ -50,8 +50,8 @@
 <div class="grid-view"><div class="prev"><a href="pineapple/easy_crochet.html"><img src="pineapple/images/easycrochett.jpg" alt="" /></a></div>
 <p><a href="pineapple/easy_crochet.html">Easy Pineapple</a></p></div>
 
-<div class="grid-view"><div class="prev"><a href="pineapple/large_pineapple.html"><img src="pineapple/images/lpineapplet.jpg" alt="" /></a></div>
-<p><a href="pineapple/large_pineapple.html">Large Pineapple</a></p></div>
+<div class="grid-view"><div class="prev"><a href="pineapple/lpineapple.html"><img src="pineapple/images/lpineapplet.jpg" alt="" /></a></div>
+<p><a href="pineapple/lpineapple.html">Large Pineapple</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="pineapple/pineapple_bead.html"><img src="pineapple/images/pineapple_beadt.jpg" alt="" /></a></div><p><a href="pineapple/pineapple_bead.html">Pineappels and Beads</a></p></div>
 
