--- a/afghan.html
+++ b/afghan.html
@@ -13,6 +13,15 @@
   height: 30px;
 }
 </style>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GA_MEASUREMENT_ID');
+</script>
 </head>
 <body>
 <div class="wrap">
