--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 }
 </style>
 
-
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
 <script>
-window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-ga('create', 'UA-XXXXX-Y', 'auto');
-ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GA_MEASUREMENT_ID');
 </script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 </head>
 <body>
 <div class="wrap">
