--- a/index.html
+++ b/index.html
@@ -98,5 +98,20 @@
    <div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
+	
+<!-- Default Statcounter code for doilybox https://doilybox.com/ -->
+<script type="text/javascript">
+var sc_project=12475585; 
+var sc_invisible=1; 
+var sc_security="60e23211"; 
+var sc_https=1; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12475585/0/60e23211/1/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
