--- a/round.html
+++ b/round.html
@@ -13,17 +13,6 @@
   height: 30px;
 }
 </style>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'GA_MEASUREMENT_ID');
-</script>
-
-
 </head>
 <body>
 <div class="wrap">
@@ -55,6 +44,8 @@
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Decorative Doily Patterns </p></font></center>
 
 
+
+<div class="grid-view"><div class="prev"><a href="round/pwhite.html"><img src="round/images/pwhitet.jpg" alt="" /></a></div><p><a href="round/pwhite.html">Pink White Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/butterfly.html"><img src="round/images/butterflyt.jpg" alt="" /></a></div><p><a href="round/butterfly.html">Butterfly Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/clust.html"><img src="round/images/clustt.jpg" alt="" /></a></div><p><a href="round/clust.html">Crocheted Cluster Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/shade.html"><img src="round/images/shadet.jpg" alt="" /></a></div><p><a href="round/shade.html">Pink Lavender Doily</a></p></div>
