--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
 
 
+
+<div class="grid-view"><div class="prev"><a href="round/pwhite.html"><img src="round/images/pwhitet.jpg" alt="" /></a></div><p><a href="round/pwhite.html">Pink White Doily</a></p></div>
+<div class="grid-view"><div class="prev"><a href="ruffle/frills.html"><img src="ruffle/images/frillst.jpg" alt="" /></a></div><p><a href="ruffle/frills.html">Daisy Frills Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/butterfly.html"><img src="round/images/butterflyt.jpg" alt="" /></a></div><p><a href="round/butterfly.html">Butterfly Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/reef.html"><img src="ruffle/images/reeft.jpg" alt="" /></a></div><p><a href="ruffle/reef.html">Ruffle Reef Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/mag.html"><img src="ruffle/images/magt.jpg" alt="" /></a></div><p><a href="ruffle/mag.html">Magnolia Blossom Doily</a></p></div>
@@ -68,12 +71,7 @@
 <div class="grid-view"><div class="prev"><a href="bedspread/crystal.html"><img src="bedspread/images/crystalt.jpg" alt="" /></a></div><p><a href="bedspread/crystal.html">Crystal Web Bedspread</a></p></div>	
 <div class="grid-view"><div class="prev"><a href="tablecloths/lotus.html"><img src="tablecloths/images/lotust.jpg" alt="" /></a></div><p><a href="tablecloths/lotus.html">Lovely Lotus Tablecloth</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
-<div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
-<div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
-<div class="grid-view"><div class="prev"><a href="floral/rosebouquet.html"><img src="floral/images/rosebouquett.jpg" alt="" /></a></div><p><a href="floral/rosebouquet.html">Rose Bouquet</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/fan.html"><img src="round/images/fant.jpg" alt="" /></a></div><p><a href="round/fan.html">Shell Fan </a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily </a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/links.html"><img src="round/images/linkst.jpg" alt="" /></a></div><p><a href="round/links.html">Lacy Links</a></p></div>
+
 
 <div class="grid-view"><div class="prev"><a href="ruffle/starbr.html"><img src="ruffle/images/starbrt.jpg" alt="" /></a></div><p><a href="ruffle/starbr.html">Starburst Ruffle</a></p></div>
 
@@ -89,20 +87,5 @@
    <div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
-	
-<!-- Default Statcounter code for doilybox https://doilybox.com/ -->
-<script type="text/javascript">
-var sc_project=12475585; 
-var sc_invisible=1; 
-var sc_security="60e23211"; 
-var sc_https=1; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js" async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img class="statcounter"
-src="https://c.statcounter.com/12475585/0/60e23211/1/" alt="Web
-Analytics"></a></div></noscript>
-<!-- End of Statcounter Code -->
 </body>
 </html>
