--- a/round.html
+++ b/round.html
@@ -44,7 +44,7 @@
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Decorative Doily Patterns </p></font></center>
 
 
-
+<div class="grid-view"><div class="prev"><a href="round/scu.html"><img src="round/images/scut.jpg" alt="" /></a></div><p><a href="round/scu.html">Sculptured Scallops Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/pwhite.html"><img src="round/images/pwhitet.jpg" alt="" /></a></div><p><a href="round/pwhite.html">Pink White Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/butterfly.html"><img src="round/images/butterflyt.jpg" alt="" /></a></div><p><a href="round/butterfly.html">Butterfly Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/clust.html"><img src="round/images/clustt.jpg" alt="" /></a></div><p><a href="round/clust.html">Crocheted Cluster Doily</a></p></div>
