--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 
 
+
+<div class="grid-view"><div class="prev"><a href="round/scu.html"><img src="round/images/scut.jpg" alt="" /></a></div><p><a href="round/scu.html">Sculptured Scallops Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/pwhite.html"><img src="round/images/pwhitet.jpg" alt="" /></a></div><p><a href="round/pwhite.html">Pink White Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="ruffle/frills.html"><img src="ruffle/images/frillst.jpg" alt="" /></a></div><p><a href="ruffle/frills.html">Daisy Frills Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/butterfly.html"><img src="round/images/butterflyt.jpg" alt="" /></a></div><p><a href="round/butterfly.html">Butterfly Doily</a></p></div>
@@ -71,11 +73,7 @@
 <div class="grid-view"><div class="prev"><a href="bedspread/crystal.html"><img src="bedspread/images/crystalt.jpg" alt="" /></a></div><p><a href="bedspread/crystal.html">Crystal Web Bedspread</a></p></div>	
 <div class="grid-view"><div class="prev"><a href="tablecloths/lotus.html"><img src="tablecloths/images/lotust.jpg" alt="" /></a></div><p><a href="tablecloths/lotus.html">Lovely Lotus Tablecloth</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
-
-
 <div class="grid-view"><div class="prev"><a href="ruffle/starbr.html"><img src="ruffle/images/starbrt.jpg" alt="" /></a></div><p><a href="ruffle/starbr.html">Starburst Ruffle</a></p></div>
-
-<div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
    <div class="clear"></div>
     </div>
     <div class="clear"></div>
