--- a/tablecloths.html
+++ b/tablecloths.html
@@ -13,17 +13,6 @@
   height: 30px;
 }
 </style>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'GA_MEASUREMENT_ID');
-</script>
-
-
 </head>
 <body>
 <div class="wrap">
@@ -46,6 +35,15 @@
 				<li><a href="index.html">HOME</a></li>
        
             </ul>
+						<ul><li>
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:150px;height:300px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="6000163884"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></li></ul>
         </div>
         
     </div>
