--- a/floral.html
+++ b/floral.html
@@ -15,15 +15,6 @@
 }
 </style>
 
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'GA_MEASUREMENT_ID');
-</script>
 </head>
 <body>
 <div class="wrap">
@@ -45,7 +36,15 @@
 				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
 				<li><a href="index.html">HOME</a></li>
 </ul>
-
+			<br><br>
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:150px;height:300px"
+     data-ad-client="ca-pub-7162871844388187"
+     data-ad-slot="6000163884"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </div>
 		
       
